# stackfmt

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  stackfmt.rs
