[package]
name = "stackfmt"
description = "Write formatted string to a buffer without alloc"
version = "0.1.2"
authors = ["Vladimir Zvezda"]
edition = "2021"
license = "MIT"
keywords = ["format", "stack"]
categories = ["no-std"]
readme = "README.md"
repository = "https://github.com/vzvezda/stackfmt"

# No dependencies!
